src/grammar/.antlr/TyCParser.py
# Generated from d:/.desktop_backup/temp/.3/PPL/BTL/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "'int'", "'auto'", "'float'", 
                     "'string'", "'switch'", "'case'", "'default'", "'if'", 
                     "'else'", "'for'", "'while'", "'return'", "'break'", 
                     "'continue'", "'struct'", "'=='", "'!='", "'<='", "'>='", 
                     "'||'", "'&&'", "'++'", "'--'", "'+'", "<INVALID>", 
                     "'-'", "'*'", "'%'", "'!'", "'<'", "'>'", "'.'", "'='", 
                     "'('", "')'", "'{'", "'}'", "','", "';'", "':'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "KEYWORD_TYPE_VOID", "KEYWORD_TYPE_INT", 
                      "KEYWORD_TYPE_AUTO", "KEYWORD_TYPE_FLOAT", "KEYWORD_TYPE_STR", 
                      "KEYWORD_SWITCH", "KEYWORD_CASE", "KEYWORD_DEFAULT", 
                      "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_FOR", "KEYWORD_WHILE", 
                      "KEYWORD_RETURN", "KEYWORD_BREAK", "KEYWORD_CONTINUE", 
                      "KEYWORD_STRUCT", "OP_EQ", "OP_NEQ", "OP_LEQ", "OP_GEQ", 
                      "OP_OR", "OP_AND", "OP_INC", "OP_DEC", "OP_ADD", "OP_DIV", 
                      "OP_SUB", "OP_MUL", "OP_MOD", "OP_NOT", "OP_LT", "OP_GT", 
                      "DOT", "EQ", "LP", "RP", "LB", "RB", "CM", "SM", "CL", 
                      "DOUBLE_QUOTE", "INT_LIT", "FLOAT_LIT", "STR_LIT", 
                      "STR_LIT_ESCAPED_CHARS", "ID", "WS", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_non_empty_decl_list = 2
    RULE_decl = 3
    RULE_struct_decl = 4
    RULE_struct_member_decl_list = 5
    RULE_non_empty_struct_member_decl_list = 6
    RULE_struct_member_decl = 7
    RULE_struct_literal = 8
    RULE_struct_literal_members = 9
    RULE_expr_list = 10
    RULE_func_decl = 11
    RULE_return_type = 12
    RULE_param_list = 13
    RULE_non_empty_param_list = 14
    RULE_param_decl = 15
    RULE_statement_list = 16
    RULE_non_empty_statement_list = 17
    RULE_statement = 18
    RULE_block_statement = 19
    RULE_var_decl_statement = 20
    RULE_var_decl = 21
    RULE_type_decl = 22
    RULE_if_statement = 23
    RULE_if_else_statement = 24
    RULE_while_statement = 25
    RULE_for_statement = 26
    RULE_for_init = 27
    RULE_for_cond = 28
    RULE_for_update = 29
    RULE_switch_statement = 30
    RULE_case_list = 31
    RULE_non_empty_case_list = 32
    RULE_case_element = 33
    RULE_case_default = 34
    RULE_break_statement = 35
    RULE_continue_statement = 36
    RULE_return_statement = 37
    RULE_expr_statement = 38
    RULE_expr = 39
    RULE_expr_pred_0 = 40
    RULE_expr_pred_1 = 41
    RULE_expr_pred_2 = 42
    RULE_expr_pred_3 = 43
    RULE_expr_pred_4 = 44
    RULE_expr_pred_5 = 45
    RULE_expr_pred_6 = 46
    RULE_expr_pred_7 = 47
    RULE_expr_pred_8 = 48
    RULE_expr_pred_9 = 49
    RULE_expr_pred_10 = 50
    RULE_expr_prefix_inc_or_dec = 51
    RULE_expr_postfix_inc_or_dec = 52
    RULE_inc_or_dec_expr = 53
    RULE_assignment_expr = 54
    RULE_expr_member_access = 55
    RULE_operand_func_call = 56
    RULE_operand_list = 57
    RULE_non_empty_operand_list = 58
    RULE_operand = 59
    RULE_sub_expr = 60
    RULE_explicit_type = 61

    ruleNames =  [ "program", "decl_list", "non_empty_decl_list", "decl", 
                   "struct_decl", "struct_member_decl_list", "non_empty_struct_member_decl_list", 
                   "struct_member_decl", "struct_literal", "struct_literal_members", 
                   "expr_list", "func_decl", "return_type", "param_list", 
                   "non_empty_param_list", "param_decl", "statement_list", 
                   "non_empty_statement_list", "statement", "block_statement", 
                   "var_decl_statement", "var_decl", "type_decl", "if_statement", 
                   "if_else_statement", "while_statement", "for_statement", 
                   "for_init", "for_cond", "for_update", "switch_statement", 
                   "case_list", "non_empty_case_list", "case_element", "case_default", 
                   "break_statement", "continue_statement", "return_statement", 
                   "expr_statement", "expr", "expr_pred_0", "expr_pred_1", 
                   "expr_pred_2", "expr_pred_3", "expr_pred_4", "expr_pred_5", 
                   "expr_pred_6", "expr_pred_7", "expr_pred_8", "expr_pred_9", 
                   "expr_pred_10", "expr_prefix_inc_or_dec", "expr_postfix_inc_or_dec", 
                   "inc_or_dec_expr", "assignment_expr", "expr_member_access", 
                   "operand_func_call", "operand_list", "non_empty_operand_list", 
                   "operand", "sub_expr", "explicit_type" ]

    EOF = Token.EOF
    KEYWORD_TYPE_VOID=1
    KEYWORD_TYPE_INT=2
    KEYWORD_TYPE_AUTO=3
    KEYWORD_TYPE_FLOAT=4
    KEYWORD_TYPE_STR=5
    KEYWORD_SWITCH=6
    KEYWORD_CASE=7
    KEYWORD_DEFAULT=8
    KEYWORD_IF=9
    KEYWORD_ELSE=10
    KEYWORD_FOR=11
    KEYWORD_WHILE=12
    KEYWORD_RETURN=13
    KEYWORD_BREAK=14
    KEYWORD_CONTINUE=15
    KEYWORD_STRUCT=16
    OP_EQ=17
    OP_NEQ=18
    OP_LEQ=19
    OP_GEQ=20
    OP_OR=21
    OP_AND=22
    OP_INC=23
    OP_DEC=24
    OP_ADD=25
    OP_DIV=26
    OP_SUB=27
    OP_MUL=28
    OP_MOD=29
    OP_NOT=30
    OP_LT=31
    OP_GT=32
    DOT=33
    EQ=34
    LP=35
    RP=36
    LB=37
    RB=38
    CM=39
    SM=40
    CL=41
    DOUBLE_QUOTE=42
    INT_LIT=43
    FLOAT_LIT=44
    STR_LIT=45
    STR_LIT_ESCAPED_CHARS=46
    ID=47
    WS=48
    BLOCK_COMMENT=49
    LINE_COMMENT=50
    ERROR_CHAR=51
    ILLEGAL_ESCAPE=52
    UNCLOSE_STRING=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(TyCParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.decl_list()
            self.state = 125
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_empty_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Non_empty_decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl_list




    def decl_list(self):

        localctx = TyCParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 4, 5, 16, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.non_empty_decl_list()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_empty_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(TyCParser.DeclContext,0)


        def non_empty_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Non_empty_decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_non_empty_decl_list




    def non_empty_decl_list(self):

        localctx = TyCParser.Non_empty_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_non_empty_decl_list)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.decl()
                self.state = 132
                self.non_empty_decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(TyCParser.Func_declContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl




    def decl(self):

        localctx = TyCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.struct_decl()
                pass
            elif token in [1, 2, 4, 5, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_STRUCT(self):
            return self.getToken(TyCParser.KEYWORD_STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def struct_member_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_member_decl_listContext,0)


        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def SM(self):
            return self.getToken(TyCParser.SM, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_decl




    def struct_decl(self):

        localctx = TyCParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_struct_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(TyCParser.KEYWORD_STRUCT)
            self.state = 142
            self.match(TyCParser.ID)
            self.state = 143
            self.match(TyCParser.LB)
            self.state = 144
            self.struct_member_decl_list()
            self.state = 145
            self.match(TyCParser.RB)
            self.state = 146
            self.match(TyCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_member_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_empty_struct_member_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Non_empty_struct_member_decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_member_decl_list




    def struct_member_decl_list(self):

        localctx = TyCParser.Struct_member_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_struct_member_decl_list)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 4, 5, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.non_empty_struct_member_decl_list()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_empty_struct_member_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_member_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_member_declContext,0)


        def non_empty_struct_member_decl_list(self):
            return self.getTypedRuleContext(TyCParser.Non_empty_struct_member_decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_non_empty_struct_member_decl_list




    def non_empty_struct_member_decl_list(self):

        localctx = TyCParser.Non_empty_struct_member_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_non_empty_struct_member_decl_list)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.struct_member_decl()
                self.state = 153
                self.non_empty_struct_member_decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.struct_member_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_member_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explicit_type(self):
            return self.getTypedRuleContext(TyCParser.Explicit_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SM(self):
            return self.getToken(TyCParser.SM, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_member_decl




    def struct_member_decl(self):

        localctx = TyCParser.Struct_member_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_member_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.explicit_type()
            self.state = 159
            self.match(TyCParser.ID)
            self.state = 160
            self.match(TyCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def struct_literal_members(self):
            return self.getTypedRuleContext(TyCParser.Struct_literal_membersContext,0)


        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_literal




    def struct_literal(self):

        localctx = TyCParser.Struct_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_struct_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(TyCParser.LB)
            self.state = 163
            self.struct_literal_members()
            self.state = 164
            self.match(TyCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_literal_membersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_list(self):
            return self.getTypedRuleContext(TyCParser.Expr_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_literal_members




    def struct_literal_members(self):

        localctx = TyCParser.Struct_literal_membersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_literal_members)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23, 24, 25, 27, 30, 35, 37, 43, 44, 45, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.expr_list()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def CM(self):
            return self.getToken(TyCParser.CM, 0)

        def struct_literal_members(self):
            return self.getTypedRuleContext(TyCParser.Struct_literal_membersContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expr_list




    def expr_list(self):

        localctx = TyCParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_list)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.expr()
                self.state = 171
                self.match(TyCParser.CM)
                self.state = 172
                self.struct_literal_members()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(TyCParser.Return_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def statement_list(self):
            return self.getTypedRuleContext(TyCParser.Statement_listContext,0)


        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_func_decl




    def func_decl(self):

        localctx = TyCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.return_type()
            self.state = 178
            self.match(TyCParser.ID)
            self.state = 179
            self.match(TyCParser.LP)
            self.state = 180
            self.param_list()
            self.state = 181
            self.match(TyCParser.RP)
            self.state = 182
            self.match(TyCParser.LB)
            self.state = 183
            self.statement_list()
            self.state = 184
            self.match(TyCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explicit_type(self):
            return self.getTypedRuleContext(TyCParser.Explicit_typeContext,0)


        def KEYWORD_TYPE_VOID(self):
            return self.getToken(TyCParser.KEYWORD_TYPE_VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_return_type




    def return_type(self):
